lib/src/generated/bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/pro_miniaudio.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class ProMiniaudioBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ProMiniaudioBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ProMiniaudioBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Creates a new audio context.
  ffi.Pointer<ffi.Void> audio_context_create() {
    return _audio_context_create();
  }

  late final _audio_context_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'audio_context_create');
  late final _audio_context_create =
      _audio_context_createPtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  /// Destroys an audio context.
  void audio_context_destroy(
    ffi.Pointer<ffi.Void> self,
  ) {
    return _audio_context_destroy(
      self,
    );
  }

  late final _audio_context_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'audio_context_destroy');
  late final _audio_context_destroy = _audio_context_destroyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Refreshes the list of available audio devices.
  void audio_context_refresh_devices(
    ffi.Pointer<ffi.Void> self,
  ) {
    return _audio_context_refresh_devices(
      self,
    );
  }

  late final _audio_context_refresh_devicesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'audio_context_refresh_devices');
  late final _audio_context_refresh_devices = _audio_context_refresh_devicesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<device_infos_t> audio_context_get_device_infos(
    ffi.Pointer<ffi.Void> self,
    audio_device_type_t type,
  ) {
    return _audio_context_get_device_infos(
      self,
      type.value,
    );
  }

  late final _audio_context_get_device_infosPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<device_infos_t> Function(ffi.Pointer<ffi.Void>,
              ffi.UnsignedInt)>>('audio_context_get_device_infos');
  late final _audio_context_get_device_infos =
      _audio_context_get_device_infosPtr.asFunction<
          ffi.Pointer<device_infos_t> Function(ffi.Pointer<ffi.Void>, int)>();

  /// Destroys a device information structure.
  void audio_context_device_infos_destroy(
    ffi.Pointer<device_infos_t> pDeviceInfos,
  ) {
    return _audio_context_device_infos_destroy(
      pDeviceInfos,
    );
  }

  late final _audio_context_device_infos_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<device_infos_t>)>>(
      'audio_context_device_infos_destroy');
  late final _audio_context_device_infos_destroy =
      _audio_context_device_infos_destroyPtr
          .asFunction<void Function(ffi.Pointer<device_infos_t>)>();

  ffi.Pointer<device_info_ext_t> audio_context_get_device_info_ext(
    ffi.Pointer<ffi.Void> self,
    ffi.Pointer<ffi.Void> deviceId,
  ) {
    return _audio_context_get_device_info_ext(
      self,
      deviceId,
    );
  }

  late final _audio_context_get_device_info_extPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<device_info_ext_t> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>)>>('audio_context_get_device_info_ext');
  late final _audio_context_get_device_info_ext =
      _audio_context_get_device_info_extPtr.asFunction<
          ffi.Pointer<device_info_ext_t> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  /// Destroys an extended device information structure.
  void audio_context_device_info_ext_destroy(
    ffi.Pointer<device_info_ext_t> pDeviceInfoExt,
  ) {
    return _audio_context_device_info_ext_destroy(
      pDeviceInfoExt,
    );
  }

  late final _audio_context_device_info_ext_destroyPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<device_info_ext_t>)>>(
      'audio_context_device_info_ext_destroy');
  late final _audio_context_device_info_ext_destroy =
      _audio_context_device_info_ext_destroyPtr
          .asFunction<void Function(ffi.Pointer<device_info_ext_t>)>();

  /// Sets the current log level.
  void set_log_level(
    LogLevel level,
  ) {
    return _set_log_level(
      level.value,
    );
  }

  late final _set_log_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UnsignedInt)>>(
          'set_log_level');
  late final _set_log_level =
      _set_log_levelPtr.asFunction<void Function(int)>();

  /// Enables or disables logging to a file.
  void set_log_to_file_enabled(
    bool enabled,
  ) {
    return _set_log_to_file_enabled(
      enabled,
    );
  }

  late final _set_log_to_file_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
          'set_log_to_file_enabled');
  late final _set_log_to_file_enabled =
      _set_log_to_file_enabledPtr.asFunction<void Function(bool)>();

  /// Checks if file logging is currently enabled.
  bool is_log_to_file_enabled() {
    return _is_log_to_file_enabled();
  }

  late final _is_log_to_file_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
          'is_log_to_file_enabled');
  late final _is_log_to_file_enabled =
      _is_log_to_file_enabledPtr.asFunction<bool Function()>();

  /// Initializes logging to a file.
  void init_file_log(
    ffi.Pointer<ffi.Char> filename,
  ) {
    return _init_file_log(
      filename,
    );
  }

  late final _init_file_logPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'init_file_log');
  late final _init_file_log =
      _init_file_logPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Closes the currently opened log file.
  void close_file_log() {
    return _close_file_log();
  }

  late final _close_file_logPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('close_file_log');
  late final _close_file_log = _close_file_logPtr.asFunction<void Function()>();

  /// Enables or disables logging to the console.
  void set_log_to_console_enabled(
    bool enabled,
  ) {
    return _set_log_to_console_enabled(
      enabled,
    );
  }

  late final _set_log_to_console_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
          'set_log_to_console_enabled');
  late final _set_log_to_console_enabled =
      _set_log_to_console_enabledPtr.asFunction<void Function(bool)>();

  /// Logs a message with the specified severity level.
  void log_message(
    LogLevel level,
    ffi.Pointer<ffi.Char> funcName,
    ffi.Pointer<ffi.Char> format,
  ) {
    return _log_message(
      level.value,
      funcName,
      format,
    );
  }

  late final _log_messagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.UnsignedInt, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('log_message');
  late final _log_message = _log_messagePtr.asFunction<
      void Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Creates a playback device with the specified parameters.
  ffi.Pointer<ffi.Void> playback_device_create(
    ffi.Pointer<ffi.Void> pContext,
    ffi.Pointer<device_id> pDeviceId,
    playback_config_t config,
  ) {
    return _playback_device_create(
      pContext,
      pDeviceId,
      config,
    );
  }

  late final _playback_device_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<device_id>,
              playback_config_t)>>('playback_device_create');
  late final _playback_device_create = _playback_device_createPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Void>, ffi.Pointer<device_id>, playback_config_t)>();

  /// Destroys a playback device and releases its resources.
  void playback_device_destroy(
    ffi.Pointer<ffi.Void> self,
  ) {
    return _playback_device_destroy(
      self,
    );
  }

  late final _playback_device_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'playback_device_destroy');
  late final _playback_device_destroy = _playback_device_destroyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Retrieves the current state of the playback device.
  device_state_t playback_device_get_state(
    ffi.Pointer<ffi.Void> self,
  ) {
    return device_state_t.fromValue(_playback_device_get_state(
      self,
    ));
  }

  late final _playback_device_get_statePtr = _lookup<
          ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<ffi.Void>)>>(
      'playback_device_get_state');
  late final _playback_device_get_state = _playback_device_get_statePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// Starts audio playback on the specified device.
  void playback_device_start(
    ffi.Pointer<ffi.Void> self,
  ) {
    return _playback_device_start(
      self,
    );
  }

  late final _playback_device_startPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'playback_device_start');
  late final _playback_device_start = _playback_device_startPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Stops audio playback on the specified device.
  void playback_device_stop(
    ffi.Pointer<ffi.Void> self,
  ) {
    return _playback_device_stop(
      self,
    );
  }

  late final _playback_device_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'playback_device_stop');
  late final _playback_device_stop = _playback_device_stopPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Pushes audio data into the playback device's buffer.
  void playback_device_push_buffer(
    ffi.Pointer<ffi.Void> self,
    ffi.Pointer<playback_data_t> pData,
  ) {
    return _playback_device_push_buffer(
      self,
      pData,
    );
  }

  late final _playback_device_push_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<playback_data_t>)>>('playback_device_push_buffer');
  late final _playback_device_push_buffer =
      _playback_device_push_bufferPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<playback_data_t>)>();

  /// Resets the playback device's internal buffer.
  void playback_device_reset_buffer(
    ffi.Pointer<ffi.Void> self,
  ) {
    return _playback_device_reset_buffer(
      self,
    );
  }

  late final _playback_device_reset_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'playback_device_reset_buffer');
  late final _playback_device_reset_buffer = _playback_device_reset_bufferPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Creates a waveform generator with the specified parameters.
  ffi.Pointer<ffi.Void> waveform_create(
    pcm_format_t pcmFormat,
    Dartu_int32_t channels,
    int sampleRate,
    waveform_type_t waveformType,
    double amplitude,
    double frequency,
  ) {
    return _waveform_create(
      pcmFormat.value,
      channels,
      sampleRate,
      waveformType.value,
      amplitude,
      frequency,
    );
  }
